fixed styling of links referencing wrong color for border-bottom

--- a/src/styles/1-base/_base.scss
+++ b/src/styles/1-base/_base.scss
@@ -1,7 +1,7 @@
 a {
   text-decoration: none;
   color: $link-color;
-  border-bottom: 1px dotted map-get($map: $colors, $key: site-color);
+  border-bottom: 1px dotted $link-color;
   @include breakpoint(500px) {
     color: map-get($map: $colors, $key: red);
     border-bottom: 1px dotted map-get($map: $colors, $key: red);
